FBLO fixed error box overflow issue

--- a/src/stylesheets/vortex/page-mod-load-order.scss
+++ b/src/stylesheets/vortex/page-mod-load-order.scss
@@ -1,9 +1,5 @@
 #page-file-based-loadorder,
 #page-generic-loadorder {
-  .layout-flex {
-    overflow: overlay;
-  }
-
   .load-order-entry {
     display: flex;
     flex-direction: row;
